cmake_minimum_required(VERSION 3.15)
# SET (CMAKE_C_COMPILER "clang")
# SET (CMAKE_CXX_COMPILER "clang++")
project(bf_bench)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_LIST_DIR}/cmake")
set(DEPS_PREFIX "_deps")
include(External_arrow)
include(External_nanobench)
include(External_fmt)

add_executable(bf_bench bench/main.cpp)
target_link_libraries(bf_bench arrow_static)
target_link_libraries(bf_bench nanobench::nanobench)
target_link_libraries(bf_bench fmt::fmt)